# oscar

./: .gitignore  LICENSE.txt  README.md  app.py  main.py  oscar.py  pyproject.toml
oscar/: __init__.py  logging.py  main.py  telemetry.py  version.py
oscar/middleware/: __init__.py  logging.py
oscar/models/: ocr.py
oscar/routers/: docling.py  status.py
