[project]
name = "oscar"
version = "0.1.0"
description = "API and MCP Server for OCR Models and Text Extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiorwlock>=1.5.0",
    "fastapi[standard]>=0.129.0",
    "opentelemetry-distro[otlp]>=0.60b1",
    "opentelemetry-instrumentation>=0.60b1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "pydantic>=2.12.5",
    "python-json-logger>=4.0.0",
    "uvicorn>=0.41.0",
]
